# codex

codex-rs/: Cargo.toml
codex-rs/cli/src/: main.rs  proto.rs
codex-rs/simple-auth-test/: Cargo.toml
codex-rs/simple-auth-test/src/: main.rs
docs/: advanced.md  getting-started.md
